add fromto token

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -26,6 +26,7 @@ info.date=date:yyyy/mm/dd hh:mm:ss\ndate:2011/01\ndate:2011/01/03
 info.days=age:3 or older_than:today or days:(3 -5)\ntoday means -1, week means 7 and month means 30
 info.filename=filename:foo.doc or fi:image or fn:msword or file:html\nsearches for an attachment name or type
 info.from=from:(Alice or Bob)\nSearches From field
+info.fromto=fromto:(Alice)\nFrom, To, CC or BCC field contains
 info.fromre=fromre:/^[a-d].*[m-z]$/i\nSearches From field using regular expression
 info.tore=tore:/^[a-d].*[m-z]$/i\nSearches recipients(To/Cc/Bcc) field using regular expression
 info.newer_than=n:8 or nt:7week or newer_than:1year
