--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -26,6 +26,7 @@ info.date=date:yyyy/mm/dd hh:mm:ss\ndate:2011/01\ndate:2011/01/03
 info.days=age:3 或者 older_than:today 或者 days:(3 -5)\ntoday 相当于 -1, week 相当于 7, month 相当于 30
 info.filename=filename:foo.doc 或者 fi:image 或者 fn:msword 或者 file:html\n搜索附件的名字或者类型(不成熟)
 info.from=from:(Alice 或者 Bob)\n搜索From
+info.fromto=fromto:(Alice)\nFrom 或者 To 或者 CC 或者 BCC 包含
 info.fromre=fromre:/[a-d]test/i\n使用正则表达式搜索From
 info.tore=tore:/[a-d]test/i\n使用正则表达式搜索收信人(To/Cc/Bcc)
 info.newer_than=n:8 或者 nt:7week 或者 newer_than:1year
