--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -11,7 +11,12 @@ dateMatch=Date Match (2011/01/01)
 attachmentNameOrType=Attachment Name/Type
 bodyRegex=Body (RegEx)
 
+# for input
+textbox.emptyText.base=Expression Search... #1
+
 # for tooltip information
+info.helpLine1=You can disable this tooltip in option dialog
+info.helpLine2=Please type keyword to search
 info.disable=You can disable this tooltip in option dialog
 info.blank=Please type keywords to search, click this line for help
 info.after=after:Mar 10, 2011\naf:(2011/03/01 -2011/03/09)\nafter:Mon, 25 Dec 1995 13:30:00 GMT\naf:(3:0 -4:0) will search for messages in current view that date between 3am to 4am EVERY day
