--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -11,7 +11,12 @@ dateMatch=日期匹配 (2011/01/01)
 attachmentNameOrType=附件名字或类型
 bodyRegex=正文 (正则表达式)
 
+# for input
+textbox.emptyText.base=表达式搜索... #1
+
 # for tooltip information
+info.helpLine1=您可以在选项里面关闭此提示
+info.helpLine2=请输入表达式进行搜索
 info.disable=您可以在选项里面关闭此提示
 info.blank=请输入表达式进行搜索，单击此行可以查看帮助文件
 info.after=after:Mar 10, 2011\naf:(2011/03/01 -2011/03/09)\nafter:Mon, 25 Dec 1995 13:30:00 GMT\naf:(3:0 -4:0) 将搜索每天3到4点的邮件
