make click2search work, move locale settings from dtd to js, add keyset

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -13,6 +13,18 @@ bodyRegex=Body (RegEx)
 
 # for input
 textbox.emptyText.base=Expression Search... #1
+focusSearch.key=b
+focusSearch.mod=accel
+back2folder.keycode=VK_LEFT
+back2folder.mod=accel alt
+
+# for context menu
+about.about=About
+dialog.settings=Settings
+option.help=Help
+donate.label=Donate
+donate.image=chrome://expressionsearch/content/paypal.ico
+donate.pay=mozilla
 
 # for tooltip information
 info.helpLine1=You can disable this tooltip in option dialog
