--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -13,6 +13,18 @@ bodyRegex=正文 (正则表达式)
 
 # for input
 textbox.emptyText.base=表达式搜索... #1
+focusSearch.key=b
+focusSearch.mod=accel
+back2folder.keycode=VK_LEFT
+back2folder.mod=accel alt
+
+# for context menu
+about.about=关于
+dialog.settings=设置
+option.help=帮助
+donate.label=资助
+donate.image=chrome://expressionsearch/content/alipay.ico
+donate.pay=alipay
 
 # for tooltip information
 info.helpLine1=您可以在选项里面关闭此提示
