move string from dtd to properties

--- a/locale/en-US/ExpressionSearch.properties
+++ b/locale/en-US/ExpressionSearch.properties
@@ -60,5 +60,13 @@ info.size=size:10 or size:1.4M\nMessage Size big than
 info.smaller=smaller:1G or sm:1024\nMessage Size less than
 info.gloda=Trigger gloda search if enabled
 
+# for virtual folder select
+virtualfolder.selectall=Select All
+virtualfolder.clearall=Clear All
+virtualfolder.modelabel=When click change:
+virtualfolder.modesingle=Current Only
+virtualfolder.modechild=Current & Children
+virtualfolder.modedescendants=Current & Descendants
+
 # If you can localize the help document, please change "content" to "locale" below and put localized document under locale dir
 expressionsearch.helpfile=chrome://expressionsearch/content/help.html
