--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -60,5 +60,13 @@ info.size=size:10 或者 size:1.4M\n邮件大小超过
 info.smaller=smaller:1G 或者 sm:1024\n邮件大小小于
 info.gloda=如果使能了全局搜索，那么就使用它
 
+# for virtual folder select
+virtualfolder.selectall=选择所有
+virtualfolder.clearall=清空选择
+virtualfolder.modelabel=鼠标单击时改变
+virtualfolder.modesingle=仅当前项
+virtualfolder.modechild=当前项以及子节点
+virtualfolder.modedescendants=当前项以及以下所有子节点
+
 # If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir
 expressionsearch.helpfile=chrome://expressionsearch/content/help.html
