--- a/locale/de-DE/ExpressionSearch.properties
+++ b/locale/de-DE/ExpressionSearch.properties
@@ -24,7 +24,7 @@ dialog.settings=Settings
 option.help=Help
 donate.label=Donate
 donate.image=chrome://expressionsearch/content/paypal.ico
-donate.pay=mozilla
+donate.pay=paypal
 
 # for tooltip information
 info.helpLine1=You can disable this tooltip in option dialog
