--- a/locale/de/ExpressionSearch.properties
+++ b/locale/de/ExpressionSearch.properties
@@ -69,4 +69,5 @@ virtualfolder.modechild=Current & Children
 virtualfolder.modedescendants=Current & Descendants
 
 # If you can localize the help document, please change "content" to "locale" below and put localized document under locale dir
+#currently not in use
 expressionsearch.helpfile=chrome://expressionsearch/content/help.html
