--- a/locale/zh-CN/ExpressionSearch.properties
+++ b/locale/zh-CN/ExpressionSearch.properties
@@ -69,4 +69,5 @@ virtualfolder.modechild=当前项以及子节点
 virtualfolder.modedescendants=当前项以及以下所有子节点
 
 # If you can localize the help document, please change "content" to "locale" below and put locailized document under locale dir
+#currently not in use
 expressionsearch.helpfile=chrome://expressionsearch/content/help.html
